[JSC] Fix FTL BigInt operations for comparisons https://bugs.webkit.org/show_bug.cgi?id=309712 rdar://171518842

Reviewed by Yijia Huang.

callWithoutSideEffects should be used only when it is pure operation and
it is not load-dependent. HeapBigInt speculation requirement means that
this function call is load-dependent: we need to check and load the
cell's type before calling operation. Otherwise, this call can be
hoisted randomly before the check.

Test: JSTests/stress/big-int-call-side-effect.js

* JSTests/stress/big-int-call-side-effect.js: Added.
(main.v1):
(main.v4):
(main):
* Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):

Canonical link: https://commits.webkit.org/309099@main